Cross-validation completed

--- a/Modelling/Engagement_models.ipynb
+++ b/Modelling/Engagement_models.ipynb
@@ -6,12 +6,14 @@
    "metadata": {},
    "source": [
     "In this notebook, we will create and compare several models. Our target feature for this notebooks is (Likes+Comments/(Views+1))\n",
-    "which we will call \"engagement\". We have added 1 to the denonimator just to ensure we never divide by zero. "
+    "which we will call \"engagement\". We have added 1 to the denonimator just to ensure we never divide by zero. \n",
+    "\n",
+    "Please note that we are not really creating a \"model\" of our data. That is, we do not believe our data is fully explained by our features nor that there is underlying \"true\" relationship that is linear. We are not using linear regression to predict the data or model the data. Instead, we are finding the line of best fit and using it as an indication of trend. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 75,
    "id": "98f96210-9b6b-4589-ae6a-be7b219121e9",
    "metadata": {},
    "outputs": [],
@@ -32,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 76,
    "id": "42cf1fcf-3422-4167-9ed1-d695d3e8c59a",
    "metadata": {},
    "outputs": [],
@@ -48,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 77,
    "id": "bea5e3ea-744f-4ea3-a082-27bb47cd1ac2",
    "metadata": {},
    "outputs": [],
@@ -58,13 +60,13 @@
     "df_train, df_test = train_test_split(df, shuffle = True, test_size = .2, random_state = 42) #We can't stratify because we have too many categorical features. I hope this is ok\n",
     "#DO NOT TOUCH THE ABOVE X_TEST VARIABLE FOR ANY REASON\n",
     "\n",
-    "#We want a very basic idea of the MSE for each model, before we do proper cross-validation. We use a secondary split for this.\n",
+    "#We want a very basic idea of the MSE and other metrics for each model, before we do proper cross-validation. We use a secondary split for this.\n",
     "df_tt, df_ho = train_test_split(df_train, shuffle = True, test_size = .2, random_state = 42)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 78,
    "id": "13d86438-aae7-4433-8644-e26d56daae6f",
    "metadata": {},
    "outputs": [
@@ -106,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 79,
    "id": "fc720b8d-d4a5-41ed-8e0c-cce7dfb81885",
    "metadata": {},
    "outputs": [
@@ -134,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 80,
    "id": "3e891559-d14a-47a2-af18-a5363af7e60b",
    "metadata": {},
    "outputs": [
@@ -189,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 81,
    "id": "39edb992-3082-4415-a155-dbd36c360774",
    "metadata": {},
    "outputs": [
@@ -225,10 +227,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "id": "b43452cc-12d0-4ac3-882b-d7942693d0e9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE :  0.03537933028765563\n"
+     ]
+    }
+   ],
    "source": [
     "#Create a model with all interaction terms and lasso regression \n",
     "\n",
@@ -236,8 +246,8 @@
     "from sklearn.linear_model import Lasso, LassoCV\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "scaler = StandardScaler()\n",
-    "df_tt[features] = scaler.fit_transform( df_tt[features] )\n",
-    "df_ho[features] = scaler.transform( df_ho[features] )\n",
+    "scaled_df_tt = scaler.fit_transform( df_tt[features] )\n",
+    "scaled_df_ho = scaler.transform( df_ho[features] )\n",
     "\n",
     "# using lasso cv to find the best alpha\n",
     "# lasso = LassoCV(cv=5, random_state=42, max_iter=10000, alphas=np.logspace(-4, 1, 30))\n",
@@ -250,8 +260,8 @@
     "    (\"interaction terms\", PolynomialFeatures(degree=2, interaction_only=True, include_bias=False)),\n",
     "    (\"lasso\", Lasso(alpha=0.0001, max_iter=10000))\n",
     "])\n",
-    "pipe.fit(df_tt[features], df_tt[\"y\"])\n",
-    "pred = pipe.predict(df_ho[features])\n",
+    "pipe.fit(scaled_df_tt, df_tt[\"y\"])\n",
+    "pred = pipe.predict(scaled_df_ho)\n",
     "print(\"MSE : \", root_mean_squared_error(df_ho[\"y\"], pred))\n",
     "\n",
     "# Get lasso coefficients\n",
@@ -262,30 +272,240 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 83,
    "id": "2e6b6f89-6217-41e4-a47e-b0f06f1ec11b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.03716583 0.03233239 0.03303423 0.03168026 0.03176396]\n",
+      " [0.03691576 0.03190907 0.03246994 0.03100704 0.03100165]\n",
+      " [0.03691191 0.03189267 0.03247076 0.03098313 0.03098885]\n",
+      " [0.03535259 0.03169173 0.03167689 0.03076542 0.03053575]\n",
+      " [0.03537933 0.03164283 0.03159794 0.03078122 0.03050641]]\n"
+     ]
+    }
+   ],
    "source": [
-    "#Do cross-validation to compare all models "
+    "#Do cross-validation to compare all models \n",
+    "\n",
+    "#Model 0: Baseline Average\n",
+    "#Model 1: Basic Linear Regression Model\n",
+    "#Model 2: Linear Regression with Lasso\n",
+    "#Model 3: Linear Regression with interaction terms\n",
+    "#Model 4: Linear Regression with interactions and lasso\n",
+    "\n",
+    "from sklearn.model_selection import KFold\n",
+    "num_splits = 5\n",
+    "num_models = 5\n",
+    "\n",
+    "kfold = KFold(num_splits,\n",
+    "              random_state = 42,\n",
+    "              shuffle=True)\n",
+    "\n",
+    "rmses = np.zeros((num_models, num_splits))\n",
+    "\n",
+    "for i, (train_index, test_index) in enumerate(kfold.split(df_train)): \n",
+    "\n",
+    "    df_tt = df_train.iloc[train_index]\n",
+    "    df_ho = df_train.iloc[test_index] \n",
+    "\n",
+    "    #Model 0: Baseline Average\n",
+    "    model = BaseMeanModel()\n",
+    "    model.fit(df_tt[\"y\"])\n",
+    "    y_pred = model.predict(df_ho[features])\n",
+    "    rmses[0,i] = root_mean_squared_error(df_ho[\"y\"], y_pred)\n",
+    "\n",
+    "    #Model 1: Basic Linear Regression Model\n",
+    "    model = LinearRegression()\n",
+    "    model.fit(df_tt[features], df_tt[\"y\"])\n",
+    "    y_pred = model.predict(df_ho[features])\n",
+    "    rmses[1,i] = root_mean_squared_error(df_ho[\"y\"], y_pred)\n",
+    "\n",
+    "    #Model 2: Linear Regression with Lasso\n",
+    "    scaler = StandardScaler()\n",
+    "    X_train_scaled = scaler.fit_transform(df_tt[features] )\n",
+    "    X_test_scaled = scaler.transform( df_ho[features])\n",
+    "    alpha = 0.0001\n",
+    "    lasso = Lasso(alpha=alpha, random_state=42, max_iter=10000)\n",
+    "    lasso.fit(X_train_scaled, df_tt[\"y\"])\n",
+    "    y_pred = lasso.predict(X_test_scaled)\n",
+    "    rmses[2,i] = root_mean_squared_error(df_ho[\"y\"], y_pred)\n",
+    "\n",
+    "    #Model 3: Linear Regression with interaction terms\n",
+    "    pipe = Pipeline([  (\"interaction terms\", PolynomialFeatures(degree = 2, interaction_only = True, include_bias = False) ),\n",
+    "                   (\"linear model\", LinearRegression())\n",
+    "                    ]) \n",
+    "    pipe.fit( df_tt[features], df_tt[\"y\"]) \n",
+    "    y_pred = pipe.predict( df_ho[features] )\n",
+    "    rmses[3,i] = root_mean_squared_error(df_ho[\"y\"], y_pred)\n",
+    "\n",
+    "    #Model 4: Linear Regression with interactions and lasso\n",
+    "    scaler = StandardScaler()\n",
+    "    scaled_df_tt = scaler.fit_transform( df_tt[features] )\n",
+    "    scaled_df_ho = scaler.transform( df_ho[features] )\n",
+    "    pipe = Pipeline([\n",
+    "    (\"interaction terms\", PolynomialFeatures(degree=2, interaction_only=True, include_bias=False)),\n",
+    "    (\"lasso\", Lasso(alpha=0.0001, max_iter=10000))\n",
+    "                    ])\n",
+    "    pipe.fit(scaled_df_tt, df_tt[\"y\"])\n",
+    "    y_pred = pipe.predict(scaled_df_ho)\n",
+    "    rmses[4,i] = root_mean_squared_error(df_ho[\"y\"], y_pred)\n",
+    "\n",
+    "\n",
+    "print(rmses)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 84,
+   "id": "d17df561-474b-41dc-a4be-3659ec40bc0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.03319534, 0.03266069, 0.03264946, 0.03200448, 0.03198155])"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rmses.mean(axis = 1)\n",
+    "#Pretty much as expected, models with the most features (i.e., models that included interaction terms) did the best.\n",
+    "#Interestingly, Lasso regression slightly outperformed regular linear regression. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
    "id": "7dd1bfe5-da0d-4074-969c-8aacea12ba04",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Final interpretation "
+    "#Note that in the RMSE matrix, each ROW is a different model and each COLUMN is a CV. \n",
+    "#In the above we took an average of each ROW. \n",
+    "#As a sanity check we look at the full RMSE matrix and see that yes, in each column the first row is the largest number,\n",
+    "#the second row is (often) the second largest number, etc. This means there is a consistent pattern as to the performance of our models\n",
+    "#and it is not just random noise. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d98cb8ba-44b5-4a98-99ac-6df2b4c153d3",
+   "metadata": {},
+   "source": [
+    "---Final Interpretation---\n",
+    "\n",
+    "Almost as expected, the model with the most features (i.e., the model that includes all interaction terms) performed the best. This could just be because every time a linear model has more features it will perform better, in the sense that it will have a lower rmse. \n",
+    "\n",
+    "Interestingly, our lasso model slightly outperformed our non-lasso model. \n",
+    "\n",
+    "We want to take the coefficients of our highest performing model and compare them. This is where our analysis was really headed.\n",
+    "Mathematically, the features with the highest coefficients are those that contribute the most to the trend line.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "abbfe974-86a9-4582-96b0-bd6c3b4f5288",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "popular_brand              -0.001847\n",
+      "has_any_affiliate           0.001111\n",
+      "product                    -0.002267\n",
+      "budget                     -0.001183\n",
+      "self_ref                    0.001319\n",
+      "                              ...   \n",
+      "prime_hour hasAdinTitle    -0.000339\n",
+      "prime_hour hasAdinText      0.000078\n",
+      "hashtags hasAdinTitle       0.000411\n",
+      "hashtags hasAdinText        0.002684\n",
+      "hasAdinTitle hasAdinText    0.000120\n",
+      "Length: 98, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#A final fitting to the whole data set \n",
+    "scaler = StandardScaler()\n",
+    "scaled_df = scaler.fit_transform( df[features] )\n",
+    "pipe = Pipeline([\n",
+    "    (\"interaction terms\", PolynomialFeatures(degree=2, interaction_only=True, include_bias=False)),\n",
+    "    (\"lasso\", Lasso(alpha=0.0001, max_iter=10000))\n",
+    "                    ])\n",
+    "pipe.fit(scaled_df, df[\"y\"])\n",
+    "\n",
+    "lasso_coeffs = pd.Series(pipe.named_steps['lasso'].coef_, index=pipe.named_steps['interaction terms'].get_feature_names_out(features))\n",
+    "sig_lasso_coeffs = lasso_coeffs[lasso_coeffs != 0]\n",
+    "print(sig_lasso_coeffs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "e03d7661-73cd-480a-8f74-467b86e08949",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new = sig_lasso_coeffs.sort_values(key=abs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "80b10feb-2632-410d-8ac8-9b31945b3b66",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "comparing_products hashtags   -0.001651\n",
+       "prime_hour                     0.001751\n",
+       "popular_brand                 -0.001847\n",
+       "product                       -0.002267\n",
+       "skills/teach hasAdinText       0.002273\n",
+       "speed hashtags                 0.002608\n",
+       "hashtags hasAdinText           0.002684\n",
+       "prime_hour hashtags            0.003281\n",
+       "skincare                      -0.003787\n",
+       "hashtags                      -0.003979\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new.tail(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ba936c8-6015-4a72-98e5-4610c5b9c43d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python (Erdos Institute)",
    "language": "python",
-   "name": "python3"
+   "name": "erdos_spring_2025"
   },
   "language_info": {
    "codemirror_mode": {
@@ -297,7 +517,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
