--- a/Modelling/Views_models.ipynb
+++ b/Modelling/Views_models.ipynb
@@ -5,12 +5,14 @@
    "id": "e5e37523-42d1-466e-8490-cb4b6931b933",
    "metadata": {},
    "source": [
-    "# In this notebook, we will create and compare several models. Our target feature for this notebooks is LOG(VIEWS/SUBSCRIBERS))"
+    "In this notebook, we will create and compare several models. Our target feature for this notebooks is LOG(VIEWS/SUBSCRIBERS))\n",
+    "\n",
+    "Please note that we are not really creating a \"model\" of our data. That is, we do not believe our data is fully explained by our features nor that there is underlying \"true\" relationship that is linear. We are not using linear regression to predict the data or model the data. Instead, we are finding the line of best fit and using it as an indication of trend. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 43,
    "id": "6540735a-9ca7-4f9f-bb48-b0e2bb6d189f",
    "metadata": {},
    "outputs": [
@@ -35,7 +37,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 44,
    "id": "a7c69868-7f1b-4f87-99df-50c03fc443bc",
    "metadata": {},
    "outputs": [],
@@ -73,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 45,
    "id": "174ee18d-50d9-4f5d-b30b-a78281db3cf3",
    "metadata": {},
    "outputs": [],
@@ -89,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 46,
    "id": "b2dff4f7-65bd-4f28-abfc-833d304078b2",
    "metadata": {},
    "outputs": [],
@@ -107,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 47,
    "id": "6428dbc1-d78e-47bb-9159-b42eea6a20d0",
    "metadata": {},
    "outputs": [
@@ -148,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 48,
    "id": "7a9c1ca4-fcb4-4c9c-a0f4-5e8990aab033",
    "metadata": {},
    "outputs": [
@@ -175,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 49,
    "id": "4d31581e-3aa9-4b52-b749-9993cf3299f2",
    "metadata": {},
    "outputs": [
@@ -227,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 50,
    "id": "28f85933-593b-4710-844a-0a1c7bc5436d",
    "metadata": {},
    "outputs": [
@@ -263,62 +265,283 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "b12a5133-9cea-407b-b0db-d0b9503d0279",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE :  1.5349475471917438\n"
+     ]
+    }
+   ],
    "source": [
     "#Create a model with all interaction terms and lasso regression \n",
     "\n",
+    "#Create a model with all interaction terms and lasso regression \n",
+    "from sklearn.linear_model import Lasso, LassoCV\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "scaler = StandardScaler()\n",
-    "df_tt[features] = scaler.fit_transform(df_tt[features])\n",
-    "df_ho[features] = scaler.transform(df_ho[features])\n",
+    "scaled_df_tt = scaler.fit_transform( df_tt[features] )\n",
+    "scaled_df_ho = scaler.transform( df_ho[features] )\n",
     "\n",
-    "from sklearn.linear_model import LassoCV, Lasso\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.preprocessing import PolynomialFeatures\n",
-    "\n",
-    "# # using lasso cv to find the best alpha\n",
+    "# using lasso cv to find the best alpha\n",
     "# lasso = LassoCV(cv=5, random_state=42, max_iter=10000, alphas=np.logspace(-4, 1, 30))\n",
-    "# lasso.fit( df_tt[features], df_tt[\"y\"])\n",
-    "# pred = lasso.predict( df_ho[features] )\n",
-    "# print(\"Lasso CV MSE : \",root_mean_squared_error( df_ho[\"y\"], pred) )\n",
-    "# print(\"Optimal Alpha : \", lasso.alpha_ )\n",
+    "# lasso.fit(df_tt[features], df_tt[\"y\"])\n",
+    "# pred = lasso.predict(df_ho[features])\n",
+    "# print(\"Lasso CV MSE:\", root_mean_squared_error(df_ho[\"y\"], pred))\n",
+    "# print(\"Optimal alpha:\", lasso.alpha_)\n",
     "\n",
-    "\n",
-    "pipe = Pipeline([  (\"interaction terms\", PolynomialFeatures(degree = 2, interaction_only = True, include_bias = False) ),\n",
-    "                   (\"lasso\", Lasso(alpha=0.0001, max_iter=10000))\n",
+    "pipe = Pipeline([\n",
+    "    (\"interaction terms\", PolynomialFeatures(degree=2, interaction_only=True, include_bias=False)),\n",
+    "    (\"lasso\", Lasso(alpha=0.0001, max_iter=10000))\n",
     "])\n",
-    "pipe.fit( df_tt[features], df_tt[\"y\"])\n",
-    "pred = pipe.predict( df_ho[features] )\n",
-    "print(\"MSE : \",root_mean_squared_error( df_ho[\"y\"], pred) )\n",
+    "pipe.fit(scaled_df_tt, df_tt[\"y\"])\n",
+    "pred = pipe.predict(scaled_df_ho)\n",
+    "print(\"MSE : \", root_mean_squared_error(df_ho[\"y\"], pred))\n",
     "\n",
     "# Get lasso coefficients\n",
-    "lasso_coef = pd.Series(pipe.named_steps['lasso'].coef_, index=pipe.named_steps['interaction terms'].get_feature_names_out(features))\n",
-    "lasso_coef = lasso_coef[lasso_coef != 0]\n",
-    "# print(lasso_coef)\n"
+    "lasso_coeffs = pd.Series(pipe.named_steps['lasso'].coef_, index=pipe.named_steps['interaction terms'].get_feature_names_out(features))\n",
+    "lasso_coeffs = lasso_coeffs[lasso_coeffs != 0]\n",
+    "# print(lasso_coeffs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 52,
    "id": "4a48034c-5135-4a52-a6f3-57bb5d03c11b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.64468734 1.57164797 1.56909547 1.64753598 1.70829604]\n",
+      " [1.53860029 1.48638939 1.49762178 1.56249385 1.63738036]\n",
+      " [1.53861317 1.48638776 1.49760963 1.562494   1.63735979]\n",
+      " [1.53508614 1.45829658 1.48308619 1.55340947 1.68253152]\n",
+      " [1.53494755 1.45822724 1.48293006 1.55322598 1.68145669]]\n"
+     ]
+    }
+   ],
    "source": [
-    "#Do cross-validation to compare all models "
+    "#Do cross-validation to compare all models \n",
+    "\n",
+    "#Model 0: Baseline Average\n",
+    "#Model 1: Basic Linear Regression Model\n",
+    "#Model 2: Linear Regression with Lasso\n",
+    "#Model 3: Linear Regression with interaction terms\n",
+    "#Model 4: Linear Regression with interactions and lasso\n",
+    "\n",
+    "from sklearn.model_selection import KFold\n",
+    "num_splits = 5\n",
+    "num_models = 5\n",
+    "\n",
+    "kfold = KFold(num_splits,\n",
+    "              random_state = 42,\n",
+    "              shuffle=True)\n",
+    "\n",
+    "rmses = np.zeros((num_models, num_splits))\n",
+    "\n",
+    "for i, (train_index, test_index) in enumerate(kfold.split(df_train)): \n",
+    "\n",
+    "    df_tt = df_train.iloc[train_index]\n",
+    "    df_ho = df_train.iloc[test_index] \n",
+    "\n",
+    "    #Model 0: Baseline Average\n",
+    "    model = BaseMeanModel()\n",
+    "    model.fit(df_tt[\"y\"])\n",
+    "    y_pred = model.predict(df_ho[features])\n",
+    "    rmses[0,i] = root_mean_squared_error(df_ho[\"y\"], y_pred)\n",
+    "\n",
+    "    #Model 1: Basic Linear Regression Model\n",
+    "    model = LinearRegression()\n",
+    "    model.fit(df_tt[features], df_tt[\"y\"])\n",
+    "    y_pred = model.predict(df_ho[features])\n",
+    "    rmses[1,i] = root_mean_squared_error(df_ho[\"y\"], y_pred)\n",
+    "\n",
+    "    #Model 2: Linear Regression with Lasso\n",
+    "    scaler = StandardScaler()\n",
+    "    X_train_scaled = scaler.fit_transform(df_tt[features] )\n",
+    "    X_test_scaled = scaler.transform( df_ho[features])\n",
+    "    alpha = 0.0001\n",
+    "    lasso = Lasso(alpha=alpha, random_state=42, max_iter=10000)\n",
+    "    lasso.fit(X_train_scaled, df_tt[\"y\"])\n",
+    "    y_pred = lasso.predict(X_test_scaled)\n",
+    "    rmses[2,i] = root_mean_squared_error(df_ho[\"y\"], y_pred)\n",
+    "\n",
+    "    #Model 3: Linear Regression with interaction terms\n",
+    "    pipe = Pipeline([  (\"interaction terms\", PolynomialFeatures(degree = 2, interaction_only = True, include_bias = False) ),\n",
+    "                   (\"linear model\", LinearRegression())\n",
+    "                    ]) \n",
+    "    pipe.fit( df_tt[features], df_tt[\"y\"]) \n",
+    "    y_pred = pipe.predict( df_ho[features] )\n",
+    "    rmses[3,i] = root_mean_squared_error(df_ho[\"y\"], y_pred)\n",
+    "\n",
+    "    #Model 4: Linear Regression with interactions and lasso\n",
+    "    scaler = StandardScaler()\n",
+    "    scaled_df_tt = scaler.fit_transform( df_tt[features] )\n",
+    "    scaled_df_ho = scaler.transform( df_ho[features] )\n",
+    "    pipe = Pipeline([\n",
+    "    (\"interaction terms\", PolynomialFeatures(degree=2, interaction_only=True, include_bias=False)),\n",
+    "    (\"lasso\", Lasso(alpha=0.0001, max_iter=10000))\n",
+    "                    ])\n",
+    "    pipe.fit(scaled_df_tt, df_tt[\"y\"])\n",
+    "    y_pred = pipe.predict(scaled_df_ho)\n",
+    "    rmses[4,i] = root_mean_squared_error(df_ho[\"y\"], y_pred)\n",
+    "\n",
+    "print(rmses)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "36e385db-e0eb-4064-8ade-eb7c7ebd404e",
+   "execution_count": 53,
+   "id": "bcd3249e-7178-409f-95c0-f0fcca1fa21a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.62825256, 1.54449714, 1.54449287, 1.54248198, 1.5421575 ])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Final interpretation. We'll look at coefficients for our best model and compare. "
+    "rmses.mean(axis = 1)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f90674a6-d45c-4c46-979f-d08de1620da6",
+   "metadata": {},
+   "source": [
+    "#Final interpretation. We'll look at coefficients for our best model and compare. \n",
+    "\n",
+    "---Final Interpretation---\n",
+    "\n",
+    "Almost as expected, the model with the most features (i.e., the model that includes all interaction terms) performed the best. This is this could just be because every time a linear model has more features it will perform better, in the sense that it will have a lower rmse. \n",
+    "\n",
+    "Interestingly, our lasso model slightly outperformed our non-lasso model. \n",
+    "\n",
+    "We want to take the coefficients of our highest performing model and compare them. This is where our analysis was really headed.\n",
+    "Mathematically, the features with the highest coefficients are those that contribute the most to the trend line."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "66079140-9136-4386-9b0b-2f90b5746a9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "popular_brand               0.097420\n",
+      "has_any_affiliate          -0.119768\n",
+      "product                     0.134183\n",
+      "budget                      0.088134\n",
+      "self_ref                    0.022883\n",
+      "                              ...   \n",
+      "prime_hour hasAdinTitle    -0.002207\n",
+      "prime_hour hasAdinText      0.016012\n",
+      "hashtags hasAdinTitle       0.099113\n",
+      "hashtags hasAdinText       -0.010577\n",
+      "hasAdinTitle hasAdinText   -0.075326\n",
+      "Length: 120, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#A final fitting to the whole data set \n",
+    "scaler = StandardScaler()\n",
+    "scaled_df = scaler.fit_transform( df[features] )\n",
+    "pipe = Pipeline([\n",
+    "    (\"interaction terms\", PolynomialFeatures(degree=2, interaction_only=True, include_bias=False)),\n",
+    "    (\"lasso\", Lasso(alpha=0.0001, max_iter=10000))\n",
+    "                    ])\n",
+    "pipe.fit(scaled_df, df[\"y\"])\n",
+    "\n",
+    "lasso_coeffs = pd.Series(pipe.named_steps['lasso'].coef_, index=pipe.named_steps['interaction terms'].get_feature_names_out(features))\n",
+    "sig_lasso_coeffs = lasso_coeffs[lasso_coeffs != 0]\n",
+    "print(sig_lasso_coeffs)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "861bc90d-63d0-4f13-80cd-f8143db619a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "acronym hasAdinTitle               0.000234\n",
+       "skincare comparing_products       -0.000679\n",
+       "product speed                     -0.001106\n",
+       "skills/teach comparing_products   -0.002053\n",
+       "prime_hour hasAdinTitle           -0.002207\n",
+       "                                     ...   \n",
+       "acronym                            0.154045\n",
+       "has_any_affiliate hashtags         0.219883\n",
+       "hashtags                           0.223845\n",
+       "acronym hashtags                   0.250303\n",
+       "korean                             0.261197\n",
+       "Length: 120, dtype: float64"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sig_lasso_coeffs.sort_values(key=abs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "7adeb2ca-5146-40bf-aae1-94b492af799d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "hasAdinText                  -0.104489\n",
+       "has_any_affiliate speed       0.107565\n",
+       "has_any_affiliate            -0.119768\n",
+       "product                       0.134183\n",
+       "self_ref hashtags             0.147005\n",
+       "acronym                       0.154045\n",
+       "has_any_affiliate hashtags    0.219883\n",
+       "hashtags                      0.223845\n",
+       "acronym hashtags              0.250303\n",
+       "korean                        0.261197\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new = sig_lasso_coeffs.sort_values(key=abs)\n",
+    "new.tail(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77c996d0-a175-43db-90ce-b9fa3650814a",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
