fix: file cleanup

--- a/eda_2/eda_2.ipynb
+++ b/eda_2/eda_2.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 109,
    "id": "45dd6e24",
    "metadata": {},
    "outputs": [
@@ -45,13 +45,13 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('no_early_dates_30_days_train.csv')\n",
+    "df = pd.read_csv('../data/new/no_early_dates_30_days_train.csv')\n",
     "df.columns"
    ]
   },
