moved some things around

--- a/eda_2/eda_2_fixed.ipynb
+++ b/eda_2/eda_2_fixed.ipynb
@@ -23,7 +23,7 @@
     "import re\n",
     "from scipy import stats\n",
     "from scipy.stats import zscore, ttest_ind, f_oneway\n",
-    "from statsmodels.stats.multicomp import pairwise_tukeyhsd\n"
+    "from statsmodels.stats.multicomp import pairwise_tukeyhsd"
    ]
   },
   {
