--- a/Modelling/Model_Specification_Testing.ipynb
+++ b/Modelling/Model_Specification_Testing.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "1a9794ec-4008-496d-ad80-be41f88a6e56",
+   "metadata": {},
+   "source": [
+    "In this notebook, we will compare a linear model on both real and simulated linear data to a random forest regressor to see if our modelling approach was appropriate. \n",
+    "\n",
+    "Our best performing linear model based on cross-validation included all binary interaction terms and used lasso regression. (Note that technically including interaction terms makes it non-linear, so the terminology here is misleading. The main goal is to compare our best performing model to see if it is appropriate.) "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "ac974c66-7244-4c6a-ac3b-fa2c0f78a911",
@@ -115,8 +125,16 @@
    "metadata": {},
    "source": [
     "As you can see, on our real data Random Forest has almost the same improvement over a linear model than what it does for simulated linear data.\n",
-    "Thus we conclude our real data being modelled by a linear model is close to as good as we can get. "
+    "Thus we conclude our real data being modelled with interaction terms and lasso regression was appropriate."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5d8ddae-2a37-47b9-97ed-f96ab7f6a8f1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
