--- a/eda_2/Creating the Split.ipynb
+++ b/eda_2/Creating the Split.ipynb
@@ -1,19 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "77b3cf41-0b3e-4231-af9f-f8a1066052eb",
+   "metadata": {},
+   "source": [
+    "In this notebook, we create a 50/50 split of our data. This is because we want to do hypothesis testing. We will run our EDA on the training data, form hypotheses about which tests we want to run, and perform our final analysis on the testing data. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "e6d196eb-85dd-4c99-b1fe-325d847de358",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#In this notebook, we make a 50-50 split of our data. \n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "df1 = pd.read_csv(\"../Data_Cleaning_Only/cleaned_data_correct_dates.csv\")\n",
-    "df2 = pd.read_csv(\"../Data_Cleaning_Only/no_early_dates_30_days.csv\")"
+    "df1 = pd.read_csv(\"../data/cleaned_data_correct_dates.csv\")\n",
+    "df2 = pd.read_csv(\"../data/no_early_dates_30_days.csv\")"
    ]
   },
   {
@@ -28,11 +35,11 @@
     "df1_train, df1_test = train_test_split( df1, shuffle = True, test_size = .5, random_state = 42)\n",
     "df2_train, df2_test = train_test_split( df2, shuffle = True, test_size = .5, random_state = 43)\n",
     "\n",
-    "df2_train.to_csv(\"clean_data_train.csv\")\n",
-    "df2_test.to_csv(\"clean_data_test.csv\")\n",
+    "df2_train.to_csv(\"../data/new/clean_data_train.csv\")\n",
+    "df2_test.to_csv(\"../data/new/clean_data_test.csv\"))\n",
     "\n",
-    "df1_train.to_csv(\"no_early_dates_30_days_train.csv\")\n",
-    "df1_test.to_csv(\"no_early_dates_30_days_test.csv\")"
+    "df1_train.to_csv(\"../data/new/no_early_dates_30_days_train.csv\")\n",
+    "df1_test.to_csv(\"../data/new/no_early_dates_30_days_test.csv\")"
    ]
   },
   {
