--- a/OLD/eda/Cleaning_and_Visualization1.ipynb
+++ b/OLD/eda/Cleaning_and_Visualization1.ipynb
@@ -1491,7 +1491,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "erdos_spring_2025",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1505,7 +1505,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
